# Agentic-Analytics-Platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: intake.py  profiling.py
backend/app/core/: settings.py
backend/app/schemas/: intake.py  profiling.py
backend/app/services/: data_intake_service.py  profiling_service.py
backend/app/services/readers/: __init__.py  base.py  csv_reader.py  excel_reader.py  json_reader.py  parquet_reader.py  sqlite_reader.py  tsv_reader.py
backend/tests/: conftest.py  test_data_intake_service.py  test_health.py  test_intake_api.py  test_profiling_api.py  test_profiling_service.py  test_readers.py  test_sample_data_generation.py
docs/: agent_workflows.md  architecture.md  manual_setup.md  roadmap.md
frontend/: streamlit_app.py
scripts/: generate_sample_data.py
